# Automated-PDF-Annotation-Tool

./: .gitignore  README.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml
samples/: rules.yaml
src/: api.py  cli.py
src/pdf_annotation_tool/: mark_placer.py  models.py  plugin_registry.py  rule_loader.py  service.py  text_finder.py
src/plugins/: gp_percentage.py
tests/: test_api.py  test_cli.py  test_generate_sample_pdf.py  test_gp_percentage.py  test_insert_text_unicode_failure.py  test_integration.py  test_mark_placer.py  test_plugin_registry.py  test_plugin_rule.py  test_rule_loader.py  test_service.py  test_shading_badge.py  test_text_finder.py
tools/: generate_sample_pdf.py
